Fix toolbar icon alignment - caused by addition of right-drag

--- a/MaterialSkin/HTML/material/html/css/mobile.css
+++ b/MaterialSkin/HTML/material/html/css/mobile.css
@@ -364,7 +364,7 @@
 @media only screen and (max-width:540px) {
  .lms-toolbar > .v-toolbar__content {
   margin-left:-16px !important;
-  margin-right:-11px !important;
+  margin-right:-23px !important;
  }
 
  /* Adjust dialog toolbar, so that menu icon aligns with main menu icon */
